[project]
name = "lg-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0a12",
    "langchain-experimental>=0.0.42",
    "langchain-openai>=1.0.0a4",
    "langgraph>=1.0.0a4",
    "langgraph-cli[inmem]>=0.4.3",
    "langgraph-sdk>=0.2.9",
    "numexpr>=2.14.1",
]
